[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-flux"
version = "0.1.0"
description = "Reddit Flux: deterministic Reddit CLI for public reads and OAuth-powered publishing workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sheshnarayan Iyer" }]
dependencies = [
  "praw>=7.7.1",
  "requests>=2.32.0",
]

[project.scripts]
reddit-cli = "reddit_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
